2010-05-25  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (require): lock *SYSTEM-PACKAGE-LIST* after loading
	because we might have loaded a system package

2010-05-25  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (maximize-integer-type): add
	(DEF-C-CONST): use it so that we can accept any integer C type
	but only create two C functions: for long and ulong

2010-05-25  Sam Steingold  <sds@gnu.org>

	* clisp-link.in (install): do not "make clisp-module-distrib" when
	moduledir==distribdir; useful for updating dynmod in the build directory

2010-05-25  Sam Steingold  <sds@gnu.org>

	* modules/pari/cpari.c (clisp_exception_handler): new function;
	saves errmessage[numerr] in global_err_data
	(clispErrDie): incorporate global_err_data in the error message
	(init_for_clisp): set default_exception_handler to
	clisp_exception_handler

2010-05-25  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (clispTemp): remove
	(extract0, extract1, pari-set-component, pari-make-object)
	(convert-from-pari-10, convert-from-pari-11):
	use WITH-C-VAR instead of TEMP
	(pari-mant): extract the common part of PARI-MANTISSA-EFF and
	PARI-MANTISSA and use WITH-C-VAR instead of TEMP
	(pari-mantissa-eff, pari-mantissa): use PARI-MANT
	(collect-mantissa): extract & use (ASH . 32) instead of (* . x100000000)
	(convert-from-pari-1, convert-from-pari-2): use it

2010-05-24  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (symmetric-matrix-perfection): fix declaration
	(MAXVARN): use DEF-C-CONST
	* modules/pari/cpari.c: include <pari/paripriv.h> for GP_DATA
	(init_for_clisp): init GP_DATA for #Z"" i/o

2010-05-24  Sam Steingold  <sds@gnu.org>

	* modules/pari/configure.in: do not check for init_opts
	(LIBS): append "-lm" (required for linking with LIBPARI)
	* modules/pari/cpari.c (init_for_clisp): do not use init_opts

2010-05-23  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/bdb.c (txn_status_check): add DEFCHECKER